2010-12-17 Alejandro Guerrieri <aguerrieri at kannel.org>
    * contrib/kannel-monitor/index.php: Fixes display bug on kannel monitor.
      Thanks to Mariana Gambande <mlgambande at gmail.com> for this patch.

2010-12-10 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: Fixed panic that we destroy message twice. This fixes #582.
      Thanks to Alexey K for bug report.

2010-12-09 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mem.c: fixed PANIC and memleak when flushing dlr_mem. Fixes #581.
      Thanks to Tom Moertel for bug report.

2010-11-08 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: destroy old lists by reload only if we were able to
      load new one.

2010-11-08 Alexander Malysh <amalysh at kannel.org>
    * gw/bearerbox.[ch], gw/bb_smscconn.c: moved bb_reload_list to gw/bearerbox.c
      and added wrapper function.

2010-11-04 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_smpp.c, gwlib/cfg.def: applied
      patch that adds the implementation of client SSL certificate support
      to SMPP.
      Thanks to Luca Corti <luca at fantacast.it> for this patch.

2010-11-01 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: applied patch maps the receipted_msg_id parameter
      on MO message to the foreign_id field, thus allowing to use %F for MO as well.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org>

2010-11-01 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: added smsbox group configuration
      variable sms-length to the userguide. 
      Thanks to Luca Corti <luca at fantacast.it> for this patch.

2010-11-01 Alexander Malysh <amalysh at kannel.org>
    * contrib/web/sendsms.php, gw/ota_prov.c, gwlib/fdset.c: fixed some
      spelling errors.
      Thanks to Luca Corti <luca at fantacast.it> for this patch.

2010-10-20  Stipe Tolj  <stolj at kannel.org>
    * Making development release 1.5.0.