@@ -66,12 +66,14 @@
 #include <time.h>
 #include <stdarg.h>
 #include <string.h>
+#include <ctype.h>
 
 #ifdef HAVE_EXECINFO_H
 #include <execinfo.h>
 #endif
 
 #if HAVE_SYSLOG_H
+#define	SYSLOG_NAMES
 #include <syslog.h>
 #else
 
@@ -144,8 +146,26 @@ static RWLock rwlock;
  * Syslog support.
  */
 static int sysloglevel;
+static int syslogfacility = LOG_DAEMON;
 static int dosyslog = 0;
 
+/*
+ * Decode the syslog name to its int value
+ */
+static int decode(char *name, CODE *facilities)
+{
+	register CODE *c;
+
+	if (isdigit(*name)) {
+	    return (atoi(name));
+	}
+	for (c = facilities; c->c_name; c++) {
+	    if (!strcasecmp(name, c->c_name)) {
+	        return (c->c_val);
+	    }
+	}
+	return LOG_DAEMON;
+}
 
 /*
  * Make sure stderr is included in the list.
@@ -192,10 +212,10 @@ void log_set_output_level(enum output_level level)
     int i;
 
     for (i = 0; i < num_logfiles; ++i) {
-	if (logfiles[i].file == stderr) {
-	    logfiles[i].minimum_output_level = level;
-	    break;
-	}
+        if (logfiles[i].file == stderr) {
+            logfiles[i].minimum_output_level = level;
+            break;
+        }
     }
 }
 
@@ -212,16 +232,21 @@ void log_set_log_level(enum output_level level)
     }
 }
 
+void log_set_syslog_facility(char *facility)
+{
+    if (facility != NULL)
+        syslogfacility = decode(facility, facilitynames);
+}
 
 void log_set_syslog(const char *ident, int syslog_level)
 {
     if (ident == NULL)
-	dosyslog = 0;
+        dosyslog = 0;
     else {
-	dosyslog = 1;
-	sysloglevel = syslog_level;
-	openlog(ident, LOG_PID, LOG_DAEMON);
-	debug("gwlib.log", 0, "Syslog logging enabled.");
+        dosyslog = 1;
+        sysloglevel = syslog_level;
+        openlog(ident, LOG_PID, syslogfacility);
+        debug("gwlib.log", 0, "Syslog logging enabled.");
     }
 }
 
@@ -360,15 +385,15 @@ int log_open(char *filename, int level, enum excl_state excl)
 
 #define FORMAT_SIZE (1024)
 static void format(char *buf, int level, const char *place, int e,
-		   const char *fmt, int with_timestamp)
+		   const char *fmt, int with_timestamp_and_pid)
 {
     static char *tab[] = {
-	"DEBUG: ",
-	"INFO: ",
-	"WARNING: ",
-	"ERROR: ",
-	"PANIC: ",
-	"LOG: "
+        "DEBUG: ",
+        "INFO: ",
+        "WARNING: ",
+        "ERROR: ",
+        "PANIC: ",
+        "LOG: "
     };
     static int tab_size = sizeof(tab) / sizeof(tab[0]);
     time_t t;
@@ -378,7 +403,7 @@ static void format(char *buf, int level, const char *place, int e,
     
     p = prefix;
 
-    if (with_timestamp) {
+    if (with_timestamp_and_pid) {
         time(&t);
 #if LOG_TIMESTAMP_LOCALTIME
         tm = gw_localtime(t);
@@ -388,33 +413,38 @@ static void format(char *buf, int level, const char *place, int e,
         sprintf(p, "%04d-%02d-%02d %02d:%02d:%02d ",
         tm.tm_year + 1900, tm.tm_mon + 1, tm.tm_mday,
         tm.tm_hour, tm.tm_min, tm.tm_sec);
-    
+
         p = strchr(p, '\0');
+
+        /* print PID and thread ID */
+        gwthread_self_ids(&tid, &pid);
+        sprintf(p, "[%ld] [%ld] ", pid, tid);
+    } else {
+        /* thread ID only */
+        tid = gwthread_self();
+        sprintf(p, "[%ld] ", tid);
     }
 
-    gwthread_self_ids(&tid, &pid);
-    sprintf(p, "[%ld] [%ld] ", pid, tid);
-    
     p = strchr(p, '\0');
     if (level < 0 || level >= tab_size)
-	sprintf(p, "UNKNOWN: ");
+        sprintf(p, "UNKNOWN: ");
     else
-	sprintf(p, "%s", tab[level]);
+        sprintf(p, "%s", tab[level]);
 
     p = strchr(p, '\0');
     if (place != NULL && *place != '\0')
-	sprintf(p, "%s: ", place);
+        sprintf(p, "%s: ", place);
     
     if (strlen(prefix) + strlen(fmt) > FORMAT_SIZE / 2) {
-	sprintf(buf, "%s <OUTPUT message too long>\n", prefix);
-	return;
+        sprintf(buf, "%s <OUTPUT message too long>\n", prefix);
+        return;
     }
     
     if (e == 0)
-	sprintf(buf, "%s%s\n", prefix, fmt);
+        sprintf(buf, "%s%s\n", prefix, fmt);
     else
-	sprintf(buf, "%s%s\n%sSystem error %d: %s\n",
-		prefix, fmt, prefix, e, strerror(e));
+        sprintf(buf, "%s%s\n%sSystem error %d: %s\n",
+                prefix, fmt, prefix, e, strerror(e));
 }
 
 
@@ -431,35 +461,35 @@ static void PRINTFLIKE(1,0) kannel_syslog(char *format, va_list args, int level)
     int translog;
     
     if (level >= sysloglevel && dosyslog) {
-	if (args == NULL) {
-	    strncpy(buf, format, sizeof(buf));
-	    buf[sizeof(buf) - 1] = '\0';
-	} else {
-	    vsnprintf(buf, sizeof(buf), format, args);
-	    /* XXX vsnprint not 100% portable */
-	}
+        if (args == NULL) {
+            strncpy(buf, format, sizeof(buf));
+            buf[sizeof(buf) - 1] = '\0';
+        } else {
+            vsnprintf(buf, sizeof(buf), format, args);
+            /* XXX vsnprint not 100% portable */
+        }
 
-	switch(level) {
-	case GW_DEBUG:
-	    translog = LOG_DEBUG;
-	    break;
-	case GW_INFO:
-	    translog = LOG_INFO;
-	    break;
-	case GW_WARNING:
-	    translog = LOG_WARNING;
-	    break;
-	case GW_ERROR:
-	    translog = LOG_ERR;
-	    break;
-	case GW_PANIC:
-	    translog = LOG_ALERT;
-	    break;
-	default:
-	    translog = LOG_INFO;
-	    break;
-	}
-	syslog(translog, "%s", buf);
+        switch(level) {
+            case GW_DEBUG:
+                translog = LOG_DEBUG;
+                break;
+            case GW_INFO:
+                translog = LOG_INFO;
+                break;
+            case GW_WARNING:
+                translog = LOG_WARNING;
+                break;
+            case GW_ERROR:
+                translog = LOG_ERR;
+                break;
+            case GW_PANIC:
+                translog = LOG_ALERT;
+                break;
+            default:
+                translog = LOG_INFO;
+                break;
+        }
+        syslog(translog, "%s", buf);
     }
 }
 
@@ -608,7 +638,8 @@ static int place_matches(const char *place, const char *pat)
     
     len = strlen(pat);
     if (pat[len-1] == '*')
-	return (strncasecmp(place, pat, len - 1) == 0);
+        return (strncasecmp(place, pat, len - 1) == 0);
+
     return (strcasecmp(place, pat) == 0);
 }
 
@@ -620,9 +651,9 @@ static int place_should_be_logged(const char *place)
     if (num_places == 0)
 	return 1;
     for (i = 0; i < num_places; ++i) {
-	if (*loggable_places[i] != '-' && 
-	    place_matches(place, loggable_places[i]))
-		return 1;
+        if (*loggable_places[i] != '-' && 
+            place_matches(place, loggable_places[i]))
+            return 1;
     }
     return 0;
 }
@@ -635,9 +666,9 @@ static int place_is_not_logged(const char *place)
     if (num_places == 0)
 	return 0;
     for (i = 0; i < num_places; ++i) {
-	if (*loggable_places[i] == '-' &&
-	    place_matches(place, loggable_places[i]+1))
-		return 1;
+        if (*loggable_places[i] == '-' &&
+            place_matches(place, loggable_places[i]+1))
+            return 1;
     }
     return 0;
 }
@@ -670,8 +701,8 @@ void log_set_debug_places(const char *places)
     p = strtok(gw_strdup(places), " ,");
     num_places = 0;
     while (p != NULL && num_places < MAX_LOGGABLE_PLACES) {
-	loggable_places[num_places++] = p;
-	p = strtok(NULL, " ,");
+        loggable_places[num_places++] = p;
+        p = strtok(NULL, " ,");
     }
 }
 
@@ -685,4 +716,3 @@ void log_thread_to(unsigned int idx)
              thread_id, logfiles[idx].filename, logfiles[idx].minimum_output_level);
     thread_to[thread_id] = idx;
 }
-
